[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "texas_bot"
version = "1.0.0"
description = "Telegram bot ذكي لخماسي"
authors = [{name="Breath", email=""}]

dependencies = [
    "aiogram>=3.1.0,<3.2.0",
    "asyncpg>=0.27.0,<0.28.0",
    "aiohttp>=3.8.4,<3.9.0",
    "python-dotenv>=1.0.0,<2.0.0"
]
